--- a/index.html
+++ b/index.html
@@ -6,5 +6,9 @@
 <body>
     <h1>Hello!</h1>
     <p>Welcome to my website.</p>
+    <p>This is my first website.</p>
+    <p>I am learning how to use HTML and CSS.</p>
+    <p>I am also learning how to use Git and Github.</p>
+    <p>I am taking Web Site Development - HTML - Beginning - Saddleback College</p>
 </body>
 </html>
