--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <p>I am learning how to use HTML and CSS.</p>
     <p>I am also learning how to use Git and Github.</p>
     <p>I am taking Web Site Development - HTML - Beginning - Saddleback College</p>
+    <a href="https://www.saddleback.edu/academics/degree-programs/website-development-html-beginning">Visit Saddleback.edu</a>
 </body>
 </html>
